:books: add expenses interactions to te openapi documentation
